<resources>
    <string name="app_name">Pallares_Jesus_LoginPreferences</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">Email</string>
    <string name="email_txt" />
    <string name="pass">Contraseña</string>
    <string name="pass_edit" />
    <string name="recordar">Recordar contraseña</string>
    <string name="entrar">entrar</string>
    <string name="title_activity_bienvenido">BienvenidoActivity</string>
    <string name="bienvenido">BIENVENIDO</string>
</resources>
